--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ th{background:#003366;color:#fff}
 .poll-result{background:#eef; padding:8px; margin:4px 0; border-radius:4px; font-size: 0.9em; border-left: 4px solid #003366;}
 .btn-edit{background:#ffc107; color: #000; padding: 4px 8px; margin-right: 5px;}
 .btn-del{background:#dc3545; color: #fff; padding: 4px 8px;}
+.search-container{display:flex; gap:10px; margin-bottom:10px;}
 </style>
 </head>
 
@@ -44,7 +45,7 @@ th{background:#003366;color:#fff}
 </header>
 
 <div class="card">
-    <h3 id="adminFormTitle">Creation Tools</h3>
+    <h3>Creation Tools</h3>
     <button onclick="document.getElementById('formArea').classList.toggle('hidden')">Toggle Forms</button>
     <div id="formArea" class="hidden">
         <input id="aTitle" placeholder="Announcement Title">
@@ -66,6 +67,12 @@ th{background:#003366;color:#fff}
 
 <div class="card">
     <h3>Attendance Management</h3>
+    
+    <div class="search-container">
+        <input type="text" id="attendanceSearch" placeholder="Search by Name or Admission..." style="margin:0">
+        <button onclick="document.getElementById('attendanceSearch').value=''; window.filterAttendance('')" style="background:#6c757d; margin:0">Clear</button>
+    </div>
+
     <div id="editZone" class="hidden" style="background:#fff9e6; padding:10px; border-radius:5px; border:1px solid #ffeeba; margin-bottom:10px;">
         <strong>Editing Record:</strong>
         <input id="editName" placeholder="Name">
@@ -73,9 +80,11 @@ th{background:#003366;color:#fff}
         <button id="saveEditBtn" style="background:#28a745">Save Changes</button>
         <button onclick="document.getElementById('editZone').classList.add('hidden')" style="background:#6c757d">Cancel</button>
     </div>
-    <button id="exportBtn" style="background: #28a745; margin-bottom:10px">Export to CSV (Excel Compatible)</button>
+
+    <button id="exportBtn" style="background: #28a745; margin-bottom:10px">Export to CSV (Excel)</button>
+    
     <div style="overflow-x:auto;">
-        <table>
+        <table id="attendanceTable">
             <thead>
                 <tr>
                     <th>Name</th><th>Adm</th><th>Year</th><th>Phone</th><th>Event</th><th>Actions</th>
@@ -161,6 +170,19 @@ document.getElementById("togglePass").onchange=e=>{
   document.getElementById("loginPassword").type=e.target.checked?"text":"password";
 };
 
+/* SEARCH LOGIC */
+document.getElementById("attendanceSearch").oninput = (e) => {
+    window.filterAttendance(e.target.value.toLowerCase());
+};
+
+window.filterAttendance = (query) => {
+    const rows = document.querySelectorAll("#adminAttendance tr");
+    rows.forEach(row => {
+        const text = row.innerText.toLowerCase();
+        row.style.display = text.includes(query) ? "" : "none";
+    });
+};
+
 /* DATA ACTIONS */
 document.getElementById("postAnnouncement").onclick=async()=>{
   await addDoc(collection(db,"announcements"),{title:aTitle.value, body:aBody.value, time:new Date().toLocaleString()});
@@ -173,12 +195,12 @@ document.getElementById("addEvent").onclick=async()=>{
 };
 
 document.getElementById("submitAttendance").onclick=async()=>{
-  if(!mName.value || !mEventSelect.value) return alert("Please fill Name and Select Event");
+  if(!mName.value || !mEventSelect.value) return alert("Fill Name and Select Event");
   await addDoc(collection(db,"attendance"),{name:mName.value, adm:mAdm.value, year:mYear.value, phone:mPhone.value, event:mEventSelect.value, time:new Date().toLocaleString()});
   alert("Success!"); mName.value=""; mAdm.value=""; mPhone.value="";
 };
 
-/* EDIT ATTENDANCE LOGIC */
+/* EDIT LOGIC */
 window.prepareEdit = async (id) => {
     const docSnap = await getDoc(doc(db, "attendance", id));
     if (docSnap.exists()) {
@@ -241,6 +263,8 @@ function loadAttendance(){
         </td>
       </tr>`;
     });
+    // Re-apply filter if search box isn't empty
+    window.filterAttendance(document.getElementById("attendanceSearch").value.toLowerCase());
   });
 }
 
@@ -268,7 +292,6 @@ window.vote=async(id,opt)=>{
   localStorage.setItem("voted_"+id,true); loadPolls();
 };
 
-/* IMPROVED EXCEL/CSV EXPORT */
 document.getElementById("exportBtn").onclick = async () => {
     const snap = await getDocs(collection(db, "attendance"));
     let csv = "Name,Admission,Year,Phone,Event,Time\n";
@@ -278,13 +301,9 @@ document.getElementById("exportBtn").onclick = async () => {
     });
     const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
     const link = document.createElement("a");
-    const url = URL.createObjectURL(blob);
-    link.setAttribute("href", url);
-    link.setAttribute("download", "PUYOLA_Attendance_Report.csv");
-    link.style.visibility = 'hidden';
-    document.body.appendChild(link);
+    link.href = URL.createObjectURL(blob);
+    link.download = "PUYOLA_Attendance_Report.csv";
     link.click();
-    document.body.removeChild(link);
 };
 
 document.getElementById("year").textContent=new Date().getFullYear();
