--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ footer{text-align:center;background:#eee;padding:20px;margin-top:20px}
 table{width:100%;border-collapse:collapse;margin-top:10px;background:#fff}
 th,td{border:1px solid #ddd;padding:8px;text-align:left;font-size:0.8em}
 th{background:#003366;color:#fff}
-.poll-result{background:#eef; padding:8px; margin:4px 0; border-radius:4px; font-size: 0.9em; border-left: 4px solid #003366;}
-.btn-del{background:#dc3545; color: #fff; padding: 4px 8px;}
+.btn-edit{background:#ffc107; color: #000; padding: 4px 8px; margin-right: 5px; border-radius:4px; border:none; cursor:pointer;}
+.btn-del{background:#dc3545; color: #fff; padding: 4px 8px; border-radius:4px; border:none; cursor:pointer;}
 .tabs{display:flex; gap:10px; margin-bottom:10px;}
 .tab-btn{background:#ccc; color:#333; flex:1}
 .tab-btn.active{background:#003366; color:white}
@@ -41,10 +41,7 @@ th{background:#003366;color:#fff}
 </div>
 
 <section id="adminView" class="hidden">
-<header>
-    Admin Dashboard
-    <button class="logout-btn" onclick="window.logout()">Logout</button>
-</header>
+<header>Admin Dashboard <button class="logout-btn" onclick="window.logout()">Logout</button></header>
 
 <div class="card">
     <h3>Data Management</h3>
@@ -53,14 +50,20 @@ th{background:#003366;color:#fff}
         <button class="tab-btn" id="tabAttend" onclick="window.switchTab('att')">Attendance</button>
     </div>
 
+    <div id="editZone" class="hidden" style="background:#fff9e6; padding:10px; border-radius:5px; border:1px solid #ffeeba; margin-bottom:10px;">
+        <strong>Editing Record:</strong>
+        <input id="editName" placeholder="Name">
+        <input id="editAdm" placeholder="Admission">
+        <button id="saveEditBtn" style="background:#28a745">Update Record</button>
+        <button onclick="document.getElementById('editZone').classList.add('hidden')" style="background:#6c757d">Cancel</button>
+    </div>
+
     <div id="regSection">
         <input type="text" placeholder="Search members..." oninput="window.filterTable('adminMembers', this.value)">
-        <button id="exportMembersBtn" style="background: #28a745; margin-bottom:10px">Export Member List (CSV)</button>
+        <button id="exportMembersBtn" style="background: #28a745; margin-bottom:10px">Export Members (CSV)</button>
         <div style="overflow-x:auto;">
             <table>
-                <thead>
-                    <tr><th>Name</th><th>Adm</th><th>Year</th><th>Phone</th><th>Date Joined</th><th>Action</th></tr>
-                </thead>
+                <thead><tr><th>Name</th><th>Adm</th><th>Year</th><th>Phone</th><th>Date Joined</th><th>Action</th></tr></thead>
                 <tbody id="adminMembers"></tbody>
             </table>
         </div>
@@ -71,9 +74,7 @@ th{background:#003366;color:#fff}
         <button id="exportAttendanceBtn" style="background: #28a745; margin-bottom:10px">Export Attendance (CSV)</button>
         <div style="overflow-x:auto;">
             <table>
-                <thead>
-                    <tr><th>Name</th><th>Adm</th><th>Event</th><th>Time Marked</th><th>Action</th></tr>
-                </thead>
+                <thead><tr><th>Name</th><th>Adm</th><th>Event</th><th>Time</th><th>Action</th></tr></thead>
                 <tbody id="adminAttendance"></tbody>
             </table>
         </div>
@@ -83,22 +84,16 @@ th{background:#003366;color:#fff}
 <div class="card">
     <button onclick="document.getElementById('formArea').classList.toggle('hidden')">Toggle Creation Forms</button>
     <div id="formArea" class="hidden">
-        <input id="aTitle" placeholder="Announcement Title"><textarea id="aBody" placeholder="Announcement Message"></textarea><button id="postAnnouncement">Post</button>
+        <input id="aTitle" placeholder="Announcement Title"><textarea id="aBody" placeholder="Message"></textarea><button id="postAnnouncement">Post</button>
         <hr>
         <input id="eTitle" placeholder="Event Title"><input type="date" id="eDate"><input type="time" id="eTime"><input id="eVenue" placeholder="Venue"><button id="addEvent">Add Event</button>
-        <hr>
-        <input id="pTitle" placeholder="Poll Question"><input id="pOptions" placeholder="Options (comma separated)"><input type="number" id="pDuration" placeholder="Minutes"><button id="startPoll">Start Poll</button>
     </div>
 </div>
-
 <div id="adminAnnouncements"></div>
-<div id="adminEvents"></div>
-<div id="adminPolls"></div>
 </section>
 
 <section id="memberView" class="hidden">
 <header>Member Dashboard <button class="logout-btn" onclick="window.logout()">Logout</button></header>
-
 <div class="card">
     <h3>Join PUYOLA (Membership)</h3>
     <input id="regName" placeholder="Full Name"><input id="regAdm" placeholder="Admission Number">
@@ -106,24 +101,21 @@ th{background:#003366;color:#fff}
     <input id="regPhone" placeholder="Phone Number">
     <button id="submitRegistration" style="width:100%; background:#28a745">Register Now</button>
 </div>
-
 <div class="card">
-    <h3>Event Attendance</h3>
+    <h3>Event Sign-In</h3>
     <input id="attName" placeholder="Full Name"><input id="attAdm" placeholder="Admission Number">
     <select id="mEventSelect"><option value="">Select Event</option></select>
     <button id="submitAttendance" style="width:100%">Submit Sign-In</button>
 </div>
-
 <h3>Latest Announcements</h3><div id="memberAnnouncements"></div>
 <h3>Upcoming Events</h3><div id="memberEvents"></div>
-<h3>Active Polls</h3><div id="memberPolls"></div>
 </section>
 
 <footer>© <span id="year"></span> PUYOLA | Designed by Oguma Austine</footer>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
-import { getFirestore, collection, addDoc, getDocs, doc, deleteDoc, increment, onSnapshot } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-firestore.js";
+import { getFirestore, collection, addDoc, getDocs, doc, updateDoc, deleteDoc, onSnapshot, getDoc } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-firestore.js";
 
 const firebaseConfig={
   apiKey:"AIzaSyD4CHTW2lrpUzSnvX3KGJrIPSjdaoqoBQE",
@@ -137,23 +129,35 @@ const app=initializeApp(firebaseConfig);
 const db=getFirestore(app);
 
 const ADMIN="Puyola@0032542025", MEMBER="Puyola@2025";
+let currentEditId = null;
+let currentEditCol = "";
 
-/* DOM ELEMENTS */
-const loginBox=document.getElementById("loginBox"), adminView=document.getElementById("adminView"), memberView=document.getElementById("memberView");
-const regName=document.getElementById("regName"), regAdm=document.getElementById("regAdm"), regYear=document.getElementById("regYear"), regPhone=document.getElementById("regPhone");
-const attName=document.getElementById("attName"), attAdm=document.getElementById("attAdm"), mEventSelect=document.getElementById("mEventSelect");
+/* PERSISTENT LOGIN */
+window.onload = () => {
+    const session = localStorage.getItem("puyola_session");
+    if(session === "admin") { loginBox.classList.add("hidden"); adminView.classList.remove("hidden"); loadAll(); }
+    else if(session === "member") { loginBox.classList.add("hidden"); memberView.classList.remove("hidden"); loadAll(); }
+};
 
-/* LOGIN/LOGOUT */
 document.getElementById("loginBtn").onclick=()=>{
   const pass=document.getElementById("loginPassword").value;
-  if(pass===ADMIN){ loginBox.classList.add("hidden"); adminView.classList.remove("hidden"); loadAll(); }
-  else if(pass===MEMBER){ loginBox.classList.add("hidden"); memberView.classList.remove("hidden"); loadAll(); }
-  else alert("Wrong password");
+  if(pass===ADMIN){ 
+      localStorage.setItem("puyola_session", "admin");
+      loginBox.classList.add("hidden"); adminView.classList.remove("hidden"); loadAll(); 
+  } else if(pass===MEMBER){ 
+      localStorage.setItem("puyola_session", "member");
+      loginBox.classList.add("hidden"); memberView.classList.remove("hidden"); loadAll(); 
+  } else alert("Wrong password");
 };
-window.logout=()=>{ adminView.classList.add("hidden"); memberView.classList.add("hidden"); loginBox.classList.remove("hidden"); };
+
+window.logout=()=>{ 
+    localStorage.removeItem("puyola_session");
+    adminView.classList.add("hidden"); memberView.classList.add("hidden"); loginBox.classList.remove("hidden"); 
+};
+
 document.getElementById("togglePass").onchange=e=>{ document.getElementById("loginPassword").type=e.target.checked?"text":"password"; };
 
-/* UI HELPERS */
+/* TAB & SEARCH */
 window.switchTab=(t)=>{
     document.getElementById("regSection").classList.toggle("hidden", t!=='reg');
     document.getElementById("attSection").classList.toggle("hidden", t!=='att');
@@ -170,7 +174,8 @@ window.filterTable=(tableId, val)=>{
 document.getElementById("submitRegistration").onclick=async()=>{
   if(!regName.value || !regAdm.value) return alert("Fill Name and Admission");
   await addDoc(collection(db,"members"),{name:regName.value, adm:regAdm.value, year:regYear.value, phone:regPhone.value, date:new Date().toLocaleString()});
-  alert("Membership Registered!"); regName.value=""; regAdm.value=""; regYear.value=""; regPhone.value="";
+  alert("Welcome to PUYOLA!"); 
+  regName.value=""; regAdm.value=""; regYear.value=""; regPhone.value="";
 };
 
 document.getElementById("submitAttendance").onclick=async()=>{
@@ -179,74 +184,77 @@ document.getElementById("submitAttendance").onclick=async()=>{
   alert("Attendance Recorded!"); attName.value=""; attAdm.value="";
 };
 
-/* REAL-TIME LOADERS */
-async function loadAll(){ loadAnnouncements(); loadEvents(); loadPolls(); loadAdminData(); }
+/* EDIT LOGIC */
+window.prepareEdit = async (col, id) => {
+    const docSnap = await getDoc(doc(db, col, id));
+    if (docSnap.exists()) {
+        const data = docSnap.data();
+        currentEditId = id;
+        currentEditCol = col;
+        document.getElementById("editName").value = data.name;
+        document.getElementById("editAdm").value = data.adm;
+        document.getElementById("editZone").classList.remove("hidden");
+        window.scrollTo(0, 0);
+    }
+};
+
+document.getElementById("saveEditBtn").onclick = async () => {
+    await updateDoc(doc(db, currentEditCol, currentEditId), {
+        name: document.getElementById("editName").value,
+        adm: document.getElementById("editAdm").value
+    });
+    alert("Record Updated!");
+    document.getElementById("editZone").classList.add("hidden");
+};
+
+/* LOADERS */
+async function loadAll(){ loadAnnouncements(); loadEvents(); loadAdminData(); }
 
 function loadAdminData(){
   onSnapshot(collection(db,"members"),(snap)=>{
-    const tbody = document.getElementById("adminMembers");
-    tbody.innerHTML="";
+    const tbody = document.getElementById("adminMembers"); tbody.innerHTML="";
     document.getElementById("regCount").innerText = snap.size;
     snap.forEach(d=>{ 
       const x=d.data(); 
-      tbody.innerHTML+=`<tr><td>${x.name}</td><td>${x.adm}</td><td>${x.year}</td><td>${x.phone}</td><td>${x.date}</td><td><button class="btn-del" onclick="window.delItem('members','${d.id}')">Del</button></td></tr>`; 
+      tbody.innerHTML+=`<tr><td>${x.name}</td><td>${x.adm}</td><td>${x.year}</td><td>${x.phone}</td><td>${x.date}</td>
+      <td><button class="btn-edit" onclick="window.prepareEdit('members','${d.id}')">Edit</button><button class="btn-del" onclick="window.delItem('members','${d.id}')">Del</button></td></tr>`; 
     });
   });
   onSnapshot(collection(db,"attendance"),(snap)=>{
-    const tbody = document.getElementById("adminAttendance");
-    tbody.innerHTML="";
+    const tbody = document.getElementById("adminAttendance"); tbody.innerHTML="";
     snap.forEach(d=>{ 
       const x=d.data(); 
-      tbody.innerHTML+=`<tr><td>${x.name}</td><td>${x.adm}</td><td>${x.event}</td><td>${x.time}</td><td><button class="btn-del" onclick="window.delItem('attendance','${d.id}')">Del</button></td></tr>`; 
+      tbody.innerHTML+=`<tr><td>${x.name}</td><td>${x.adm}</td><td>${x.event}</td><td>${x.time}</td>
+      <td><button class="btn-edit" onclick="window.prepareEdit('attendance','${d.id}')">Edit</button><button class="btn-del" onclick="window.delItem('attendance','${d.id}')">Del</button></td></tr>`; 
     });
   });
 }
 
 async function loadAnnouncements(){
   const snap=await getDocs(collection(db,"announcements"));
-  adminAnnouncements.innerHTML="<h4>Announcements</h4>"; memberAnnouncements.innerHTML="";
+  adminAnnouncements.innerHTML="<h4>Manage Announcements</h4>"; memberAnnouncements.innerHTML="";
   snap.forEach(d=>{
     const x=d.data(); const h=`<div class="card"><b>${x.title}</b><p>${x.body}</p>`;
-    adminAnnouncements.innerHTML+=h+`<button onclick="window.delItem('announcements','${d.id}')">Delete</button></div>`;
+    adminAnnouncements.innerHTML+=h+`<button class="btn-del" onclick="window.delItem('announcements','${d.id}')">Delete</button></div>`;
     memberAnnouncements.innerHTML+=h+`</div>`;
   });
 }
 
 async function loadEvents(){
   const snap=await getDocs(collection(db,"events"));
-  adminEvents.innerHTML="<h4>Events</h4>"; memberEvents.innerHTML=""; mEventSelect.innerHTML='<option value="">Select Event</option>';
+  memberEvents.innerHTML=""; mEventSelect.innerHTML='<option value="">Select Event</option>';
   snap.forEach(d=>{
     const x=d.data(); const h=`<div class="card"><b>${x.title}</b><br>📍 ${x.venue}</div>`;
-    adminEvents.innerHTML+=h+`<button onclick="window.delItem('events','${d.id}')">Delete</button></div>`;
     memberEvents.innerHTML+=h; mEventSelect.innerHTML+=`<option value="${x.title}">${x.title}</option>`;
   });
 }
 
-async function loadPolls(){
-  const snap=await getDocs(collection(db,"polls"));
-  adminPolls.innerHTML="<h4>Polls</h4>"; memberPolls.innerHTML="";
-  snap.forEach(d=>{
-    const p=d.data(); let res=""; for(let o in p.votes){ res+=`<div class="poll-result">${o}: <b>${p.votes[o]}</b></div>`; }
-    adminPolls.innerHTML+=`<div class="card"><b>${p.title}</b>${res}<button onclick="window.delItem('polls','${d.id}')">Delete</button></div>`;
-    let mH=`<div class="card"><b>${p.title}</b><br>`;
-    p.options.forEach(o=>{ mH+=`<button onclick="window.vote('${d.id}','${o}')">${o}</button> `; });
-    memberPolls.innerHTML+=mH+"</div>";
-  });
-}
-
-/* CSV EXPORT LOGIC */
+/* EXPORT */
 document.getElementById("exportMembersBtn").onclick=async()=>{
   const snap=await getDocs(collection(db,"members"));
   let csv="Name,Admission,Year,Phone,Date Joined\n";
   snap.forEach(d=>{ const x=d.data(); csv+=`"${x.name}","${x.adm}","${x.year}","${x.phone}","${x.date}"\n`; });
-  downloadCSV(csv, "PUYOLA_Registered_Members.csv");
-};
-
-document.getElementById("exportAttendanceBtn").onclick=async()=>{
-  const snap=await getDocs(collection(db,"attendance"));
-  let csv="Name,Admission,Event,Time Marked\n";
-  snap.forEach(d=>{ const x=d.data(); csv+=`"${x.name}","${x.adm}","${x.event}","${x.time}"\n`; });
-  downloadCSV(csv, "PUYOLA_Event_Attendance.csv");
+  downloadCSV(csv, "PUYOLA_Members.csv");
 };
 
 function downloadCSV(csv, f){
@@ -254,9 +262,7 @@ function downloadCSV(csv, f){
   const link=document.createElement("a"); link.href=URL.createObjectURL(blob); link.download=f; link.click();
 }
 
-/* GLOBAL ACTIONS */
-window.delItem=async(col,id)=>{ if(confirm("Permanently delete this record?")) await deleteDoc(doc(db,col,id)); };
-window.vote=async(id,opt)=>{ await updateDoc(doc(db,"polls",id),{[`votes.${opt}`]:increment(1)}); loadPolls(); };
+window.delItem=async(col,id)=>{ if(confirm("Permanently delete?")) await deleteDoc(doc(db,col,id)); };
 document.getElementById("year").textContent=new Date().getFullYear();
 </script>
 </body>
